Add hotel search without hotel/city name